--- a/HW/HW3/HW3.ipynb
+++ b/HW/HW3/HW3.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c14550cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "72288dd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "2ea8c2c7",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1090,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "cefa1b77",
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1116,6 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9891bf20",
    "metadata": {
     "scrolled": false
    },
@@ -1176,7 +1171,6 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "f11e4e0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1186,6 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "f165bdd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1200,6 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "c923bce0",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1222,6 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "aaab7ebf",
    "metadata": {},
    "outputs": [
     {
@@ -2723,21 +2714,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
