--- a/HW/Final project/Final project.ipynb
+++ b/HW/Final project/Final project.ipynb
@@ -2884,7 +2884,7 @@
    "source": [
     "import openai\n",
     "\n",
-    "openai.api_key = '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'\n",
+    "openai.api_key = 'your_openai_key'\n",
     "\n",
     "top_two_places = sorted_filtered_places[:2]\n",
     "\n",
