--- a/HW/HW5/HW5.ipynb
+++ b/HW/HW5/HW5.ipynb
@@ -150,8 +150,8 @@
     "password_input = driver.find_element_by_name(\"pass\")\n",
     "\n",
     "# 個人的FB帳號密碼\n",
-    "email_input.send_keys(\"ching6544239@yahoo.com\")\n",
-    "password_input.send_keys(\"z4901488\")\n",
+    "email_input.send_keys(\"your_email\")\n",
+    "password_input.send_keys(\"your_password\")\n",
     "\n",
     "# 找到網頁的登入按鈕並點擊\n",
     "login_button = driver.find_element_by_name(\"login\")\n",
