--- a/HW/Final project/Final project.ipynb
+++ b/HW/Final project/Final project.ipynb
@@ -150,7 +150,7 @@
     "import googlemaps\n",
     "\n",
     "# 替換為您的Google Maps API金鑰\n",
-    "api_key = 'AIzaSyDezjNpnZz1YkeNNXwtD9brJ9TYnzmbWP8'\n",
+    "api_key = 'A****8'\n",
     "\n",
     "# 創建Google Maps用戶端\n",
     "gmaps = googlemaps.Client(key=api_key\n",
